samples/_failures_safe/1761541168_244b08_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_34587c10.c: In function ‘tokenize’:
./samples/SAFE/__tmp_34587c10.c:170:13: error: expected declaration or statement at end of input
  170 |             tokens[count] = token;
      |             ^~~~~~
./samples/SAFE/__tmp_34587c10.c:170:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_34587c10.c:170:13: error: expected declaration or statement at end of input
